# CPP_OOP_BMSTU

LAB1/: CMakeLists.txt  main.cpp  ~$чет_лаба1_Лачина_Екатерина_ИУ5-23Б.docx  отчет_лаба1_Лачина_Екатерина_ИУ5-23Б.docx
LAB1/mymath/: CMakeLists.txt
LAB1/mymath2/: CMakeLists.txt  mymath2.cpp  mymath2.h
LAB2/: CMakeLists.txt  main.cpp  отчет_лаба2_Лачина_Екатерина_ИУ5-23Б.docx
LAB2/Avia/: CMakeLists.txt  avia.h  aviafunc.cpp
LAB2/Planet/: CMakeLists.txt  func.cpp  planet.h
LAB3/: CMakeLists.txt  main.cpp  отчет_лаба3_Лачина_Екатерина_ИУ5-23Б.docx
LAB3/Laba33/: CMakeLists.txt  Laba33.cpp  Laba33.h
LAB4/: CMakeLists.txt  main.cpp  отчет_лаба4_Лачина_Екатерина_ИУ5-23Б.docx
LAB4/Laba2sem4/: CMakeLists.txt  Laba2sem4.cpp  Laba2sem4.h
LAB5/: CMakeLists.txt  main.cpp  отчет_лаба5_Лачина_Екатерина_ИУ5-23Б.docx
LAB5/LabaPyat/: CMakeLists.txt  myset.h  myvector.cpp  myvector.h
LAB6/: main.cpp  отчет_лаба6_Лачина_Екатерина_ИУ5-23Б.docx
LAB6/Laba2sem6/: CMakeLists.txt  polynominal.cpp  polynominal.h  term.cpp  term.h
LAB7/: CMakeLists.txt  main.cpp
LAB7/LabaSeven/: CMakeLists.txt  CustomVector.cpp  CustomVector.h  DieselEngine.cpp  DieselEngine.h  Engine.cpp  Engine.h  ICEngine.cpp  ICEngine.h  JetEngine.cpp  JetEngine.h
LAB8/: CMakeLists.txt  input.txt  main.cpp  отчет_лаба8_Лачина_Екатерина_ИУ5-23Б.docx
LAB8/LabaEight/: CMakeLists.txt  LabaEight.cpp  LabaEight.h
homework/: homework.sln
homework/homework/: homework.cpp  homework.vcxproj
homework/homework/x64/Debug/: homework.exe.recipe  homework.ilk  vc143.idb
homework/homework/x64/Debug/homework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  homework.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
